Fixing list spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -88,9 +88,6 @@ section {
     margin-bottom: var(--space-between-sections);
 }
 
-ul {
-    margin-top: 0;
-}
 
 
 #about-section {
@@ -319,10 +316,11 @@ ul {
 
 .mini-list {
     list-style-type: none;
+    margin-top: 0;
     padding: 0;
 
     *:first-child > div {
-        padding-top: 0.5rem;
+        padding-top: 0rem;
     }
 
 }
